--- a/bootstrap.css
+++ b/bootstrap.css
@@ -595,21 +595,21 @@ progress {
   text-transform: uppercase;
 }
 .bi{
-  background-image: url(/5e4aacf73672830021ca0749.svg);
+  background-image: url(5e4aacf73672830021ca0749.svg);
   width: 60px;
   height: 60px;
   background-repeat: no-repeat;
   margin-bottom: 30px;
 }
 .bi-2{
-  background-image: url(/5e4aaf1e8ccf9e00211974f9.svg);
+  background-image: url(5e4aaf1e8ccf9e00211974f9.svg);
   width: 60px;
   height: 60px;
   background-repeat: no-repeat;
   margin-bottom: 30px;
 }
 .bi-3{
-  background-image: url(/5e4ab23e00988500213a5c92.svg);
+  background-image: url(5e4ab23e00988500213a5c92.svg);
   width: 60px;
   height: 60px;
   background-repeat: no-repeat;
@@ -617,7 +617,7 @@ progress {
 }
 
 .bi-11{
-  background-image: url(/chat.svg);
+  background-image: url(chat.svg);
   width: 60px;
   height: 60px;
   background-repeat: no-repeat;
@@ -625,7 +625,7 @@ progress {
   background-size: contain;
 }
 .bi-22{
-  background-image: url(/367-3675741_interactive-interactive.png);
+  background-image: url(367-3675741_interactive-interactive.png);
   width: 60px;
   height: 60px;
   background-repeat: no-repeat;
@@ -633,7 +633,7 @@ progress {
   background-size: contain;
 }
 .bi-33{
-  background-image: url(/i.webp);
+  background-image: url(i.webp);
   width: 60px;
   height: 60px;
   background-repeat: no-repeat;
@@ -641,7 +641,7 @@ progress {
   background-size: contain;
 }
 .bi-44{
-  background-image: url(/5e4ab23e00988500213a5c92.svg);
+  background-image: url(5e4ab23e00988500213a5c92.svg);
   width: 60px;
   height: 60px;
   background-repeat: no-repeat;
